--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /obj/Debug/App.baml
 /obj/Debug/MainWindow.baml
 /obj/Debug/MainWindow.g.i.cs
+/.vs/Haui_ConveyerRemote/FileContentIndex
+/obj/Debug
