--- a/CaptureWebcam.csproj
+++ b/CaptureWebcam.csproj
@@ -32,7 +32,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -130,6 +130,12 @@
     <Compile Include="Common\clsMaterial.cs" />
     <Compile Include="Database\BLDatabase.cs" />
     <Compile Include="Database\DLDatabase.cs" />
+    <Compile Include="View\PieChartExample.xaml.cs">
+      <DependentUpon>PieChartExample.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\TemplatureLineChart.xaml.cs">
+      <DependentUpon>TemplatureLineChart.xaml</DependentUpon>
+    </Compile>
     <Compile Include="wdHelp.xaml.cs">
       <DependentUpon>wdHelp.xaml</DependentUpon>
     </Compile>
@@ -154,6 +160,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\PieChartExample.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\TemplatureLineChart.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="wdHelp.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
